--- a/package.json
+++ b/package.json
@@ -8,21 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "autoprefixer": "10.4.5",
+    "axios": "^1.6.5",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
     "chart.js": "^3.8.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "moment": "^2.29.3",
     "vue": "^2.6.14",
-    "vue-chartjs": "^4.1.1"
+    "vue-chartjs": "^4.1.1",
+    "vue-loader": "^17.4.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.32.0",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   },
