--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sideway/address": "^5.0.0",
     "autoprefixer": "10.4.5",
     "axios": "^1.6.5",
     "bootstrap": "^5.1.3",
