--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
     "chart.js": "^3.8.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "moment": "^2.29.3",
